--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.5.0",
     "openai": "^4.0.0",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.10.0"
+    "express-rate-limit": "^6.10.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
